--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,41 @@
 
-a:hover{
-  text-decoration: none;
-  color: red;
-}
 
 body {
   margin: 0;
-  font-family: 'Jost', sans-serif;
+  padding: 0;
+}
+
+h1, h2, h3, p {
+  color: #343434;
 }
 
 h1 {
-  color: #343434;
   font-family: 'Lora', serif;
   font-weight: bolder;
   font-size: 3.5rem;
 }
+
 h2 {
-  color: #343434;
   font-family: 'Lora', serif;
   font-weight: bolder;
   font-size: 2rem;
 }
+
 h3 {
-  color: #343434;
   font-family: 'Jost', sans-serif;
   font-size: 1.5em;
   font-weight: 300;
 }
+
 p {
   font-family: 'Open Sans', sans-serif;
   text-align: justify;
 }
-a h1:hover, a h2:hover, a h3:hover, a p:hover {
-  color:  #00999B;
+
+a, a:hover, h1:hover, a h2:hover, a h3:hover, a p:hover {
+  text-decoration: none;
 }
+
 hr {
   height: 0;
   border-style: dotted none none none;
@@ -42,14 +44,64 @@ hr {
   border-width: 10px;
 }
 
+/******************** LOADING ********************/
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border: 50px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 50px solid #00999B;
+  -webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+}
 
-/* NAVBAR */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s
+}
+
+@-webkit-keyframes animatebottom {
+  from { bottom:-100px; opacity:0 }
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom {
+  from{ bottom:-100px; opacity:0 }
+  to{ bottom:0; opacity:1 }
+}
+
+#myDiv {
+  display: none;
+  text-align: center;
+}
+
+
+/******************** NAVBAR ********************/
 #navbar {
   position: fixed;
   top: 0px;
   width: 100%;
   transition: top 0.5s;
 }
+
 .burger {
   height: 40px;
   width: 40px;
@@ -61,20 +113,13 @@ hr {
   background-color: #00999B;
 }
 
-.navbar{
+.navbar, .navbar-collapse {
   padding: 0;
   background-color: #ffffff;
   z-index: 100;
 }
 
-.navbar-collapse{
-  position: relative;
-  background-color: #ffffff;
-  z-index: 1;
-}
-
 .navbar-nav {
-    vertical-align: middle;
     text-align: center;
 }
 
@@ -90,61 +135,38 @@ hr {
 }
 
 .nav-item, .navbar-light .navbar-nav .nav-link {
-  display: inline-block;
-  margin: 0 10px;
-  vertical-align: middle;
+  margin: 0 0 0 20px;
+  text-align: right;
   color: #343434;
   font-family: 'Open Sans', sans-serif;
   font-size: 90%;
   font-weight: bolder;
 }
 
-.navbar-toggler {
+.navbar, .navbar-toggler, .navbar-toggler:hover, .navbar-toggler:focus, .navbar-toggler:active {
   border: 0;
   padding:0;
+  outline: 0;
+  background-color: #ffffff;
+  z-index: 100;
 }
 
-.navbar-toggler:hover, .navbar-toggler:focus {
-  outline: 0;
-}
 .navbar-toggler[aria-expanded="true"] > .burger {
   background-color: #00999B;
   content: url("../images/burger-white.svg");
 }
 
-.container-fluid, .navbar{
-  padding: 0% 29%;
+.container, .navbar {
+  width: 800px;
 }
 
-.me {
-  max-width: 100%;
-  width: 350px;
-  display: block;
-  margin: 0 0 0 auto;
-  padding: 0;
-}
-
-.row {
-  margin: 0;
-}
-
-
-.title-text{
-  text-align: left;
-  padding: 20px 0;
-}
-
-.section-title{
-  text-align: center;
-  padding: 20px 0;
-}
-
-
+/* BODY -- ALL */
 
 /* BODY -- INDEX */
 
-.section {
-  padding: 5vh 0;
+.index-header {
+  height: 90vh;
+  vertical-align: middle;
 }
 
 .index-project {
@@ -162,40 +184,50 @@ hr {
 }
 
 .col-left {
-  padding: 0 10px 0 0;
-  margin-bottom: 5px;
+  padding: 0 10px 5px 0;
 }
 
 .col-right {
-  padding: 0 0 0 10px;
-  margin-bottom: 5px;
+  padding: 0 0 5px 10px;
 }
 
 .col-left img:hover, .col-right img:hover {
   opacity: 60%;
 }
 
-@media (max-width: 1700px) {
-  .container-fluid, .navbar{
-    padding: 0 25%;
-  }
+.me {
+  width: 100%;
+  display: block;
+  padding: 0;
+  vertical-align: middle;
 }
-@media (max-width: 1500px) {
-  .container-fluid, .navbar{
-    padding: 0 20%;
-  }
+
+.row {
+  margin: 0;
 }
-@media (max-width: 991px) { /* MD and below */
-  .container-fluid, .navbar{
-    padding: 0 10%;
-  }
+
+.title-text{
+  text-align: left;
+  padding: 20px 0;
 }
+
+.section-title{
+  text-align: center;
+  padding: 20px 0;
+}
+
 @media (max-width: 767px) { /* SM and below */
-  .container-fluid {
-    padding: 0 10px;
+
+  .container, .navbar {
+    width: 100vw;
+    min-width: 350px;
   }
-  .navbar {
-      padding: 0;
+  .index-header{
+    height: 70vh;
+    margin: 0 0 0 50px;
+  }
+  .nav-item, .navbar-light .navbar-nav .nav-link {
+    text-align: center;
   }
 
   .navbar-brand {
@@ -203,11 +235,13 @@ hr {
   }
 
   .me {
-    max-width: 50vw;
-    margin: 0 auto 0 auto;
+    width: 40vw;
+    min-width:150px;
+    max-width: 200px;
+    margin: 30px auto 0 auto;
   }
   .col-left, .col-right {
-    padding: 0 0 0 0;
+    padding: 0 0 5px 0;
   }
   .title-text{
     text-align: center;
@@ -225,13 +259,18 @@ hr {
 
 /* FOOTER */
 .footer{
+  display: block;
+  width:100vw;
+  position: fixed;
+  text-align: center;
   padding: 10px 0;
-  vertical-align: center;
+  margin: auto auto auto auto;
+  bottom: 0;
   font-size:75%;
   color: #e4e4e4;
 }
 .footer .col-right {
-  text-align:right;
+  text-align: right;
 }
 .social {
   color: #e4e4e4;
