--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,7 @@ hr {
 
 .navbar, .navbar-toggler, .navbar-toggler:hover, .navbar-toggler:focus, .navbar-toggler:active {
   border: 0;
+  border-radius: 0;
   padding:0;
   outline: 0;
   background-color: #ffffff;
